backend/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tech-office-prod
  labels:
    name: tech-office-prod
    app: tech-office
    environment: prod
