backend/k8s/overlays/prod/backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: public-gateway
      sectionName: api-https
  hostnames:
    - transformar.api.devguards.com
  rules:
    - backendRefs:
        - name: backend
          port: 80
